--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -7,7 +7,7 @@
     "id": "rxI6U4ffuEfy"
    },
    "source": [
-    "# What are the most common programming languages used in Brazil??"
+    "# most common programming languages used in Brazil"
    ]
   },
   {
@@ -3272,7 +3272,7 @@
     "2. Younger programming languages like **Python** have been well-deserved to be learned, but the oldest ones still have their value and are being much demanded.\n",
     "3. People who already work with a certain programming language have a tendency to learn that language or related languages within correlated areas to improve their own skill.\n",
     "\n",
-    "To see more about this analysis, see the link to my medium post available [here](https://medium.com/@ericvenarusso2/what-are-the-most-common-programming-languages-used-in-brazil-8d630b76df2f)."
+    "To see more about this analysis, see the link to my medium post available [here](https://medium.com/@kmhimanshu00/most-common-programming-languages-used-in-brazil-6ea30bffcc6a?sk=e22c853f23b84e634b2d17c00c23e8b4)."
    ]
   },
   {
