--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -3286,8 +3286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Stackoverflow Developer Survey Data: [https://insights.stackoverflow.com/survey](https://insights.stackoverflow.com/survey) <br>\n",
-    "Medium: [https://medium.com/@ericvenarusso2/what-are-the-most-common-programming-languages-used-in-brazil-8d630b76df2f](https://medium.com/@ericvenarusso2/what-are-the-most-common-programming-languages-used-in-brazil-8d630b76df2f)"
+    "Stackoverflow Developer Survey Data: [https://insights.stackoverflow.com/survey](https://insights.stackoverflow.com/survey) <br>\n"
    ]
   }
  ],
